--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import FooterSection from "@/sections/FooterSection.astro";
 import QuoteSection from "@/sections/QuoteSection.astro";
 import FAQSection from "@/sections/FAQSection.astro";
 import ProjectsSection from "@/sections/ProjectsSection.astro";
+import TestimonialsSection from "@/sections/TestimonialsSection.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -26,6 +27,7 @@ import ProjectsSection from "@/sections/ProjectsSection.astro";
   <FAQSection />
   <CTASection />
   <WhyUseSection />
+  <TestimonialsSection />
   <QuoteSection />
   <FooterSection />
 </BaseLayout>
