--- a/src/sections/TestimonialsSection.astro
+++ b/src/sections/TestimonialsSection.astro
@@ -39,6 +39,6 @@ const testimonials = Astro.props.testimonials ?? [
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
       {testimonials.map((t, i) => <TestimonialCard {...t} key={i} />)}
     </div>
-    <p class="h4 text-center pt-5">More than 500+ consumers have put their faith in us</p>
+    <p class="h4 text-center pt-5 text-dark-primary">More than 500+ consumers have put their faith in us</p>
   </div>
 </section>
