--- a/src/components/Form/Form.astro
+++ b/src/components/Form/Form.astro
@@ -11,8 +11,8 @@ const {
   formLabel = "",
   labelClass = "block h6 text-dark-secondary mb-2",
   formClass = "",
-  submitClass = "w-full mt-2 justify-center cursor-pointer",
-  submitLabel = "Submit",
+  submitClass = "w-full lg:w-auto mt-2 justify-center cursor-pointer",
+  submitLabel = "Submit Form",
   enableSuccessBanner = false,
   successBannerMessage = "Thank you for your submission!",
   successBannerClass = "p-2 bg-primary text-dark-primary border border-dark-secondary",
