--- a/src/layouts/Theme.astro
+++ b/src/layouts/Theme.astro
@@ -1,7 +1,7 @@
 ---
 // src/layouts/Theme.astro
 import "../styles/global.css";
-// import "../styles/animation.css";
+import "../styles/animations.css";
 ---
 
 <!-- Favicons -->
