--- a/src/sections/ProjectsSection.astro
+++ b/src/sections/ProjectsSection.astro
@@ -11,6 +11,26 @@ import WoodbridgeKitchenBefore from "@/assets/woodbridgekitchen/woodbridgekitche
 import WoodbridgeKitchenAfter from "@/assets/woodbridgekitchen/woodbridgekitchenafter.jpg";
 import BelfordYardBefore     from "@/assets/belford-yard/belford-yard-before.jpg";
 import BelfordYardAfter      from "@/assets/belford-yard/belford-yard-after.jpg";
+import SawarenHouseBefore from "@/assets/sawarenhouse/sawarenhousebefore.webp";
+import SawarenHouseAfter from "@/assets/sawarenhouse/sawarenhouseafter.webp";
+import RubbleDemoBefore from "@/assets/highlabfr/highlabefore.jpg";
+import RubbleDemoAfter from "@/assets/highlabfr/highlaafter.jpg";
+import kitchen2before from "@/assets/kitchen2/kitchen2before.jpg";
+import kitchen2after from "@/assets/kitchen2/kitchen2after.jpg";
+import houseBefore from "@/assets/house/housebefore.jpg";
+import houseAfter from "@/assets/house/houseafter.jpg";
+import GreenKitchenBefore from "@/assets/greenwallkitchen/greenwallkitchenbefore.jpg";
+import GreenKitchenAfter from "@/assets/greenwallkitchen/greenwallkitchenafter.jpg";
+import Shed2Before from "@/assets/shed2/shed2before.jpg";
+import Shed2After from "@/assets/shed2/shed2after.jpg";
+import AboveGroundPoolBefore from "@/assets/abovegroundpool/abovegroundbefore.jpg";
+import AboveGroundPoolAfter from "@/assets/abovegroundpool/abovegroundafter.jpg";
+import BrownShedBefore from "@/assets/brownshed/brownshedbefore.jpg";
+import BrownShedAfter from "@/assets/brownshed/brownshedafter.jpg";
+import BasementBefore from "@/assets/basement/basementbefore.jpg";
+import BasementAfter from "@/assets/basement/basementafter.jpg";
+import CrateBefore from "@/assets/crate/crate-before.png";
+import CrateAfter from "@/assets/crate/crate-after.png";
 
 const projects = [
   {
@@ -27,6 +47,61 @@ const projects = [
     title: "Shed Removal / Exterior Cleanup",
     before: BelfordYardBefore,
     after: BelfordYardAfter,
+  },
+  {
+    title: "Backyard Cleanup",
+    before: SawarenHouseBefore,
+    after: SawarenHouseAfter,
+  },
+   {
+    title: "Rubble Demolition",
+    before: RubbleDemoBefore,
+    after: RubbleDemoAfter,
+  },
+  {
+    title: "Kitchen",
+    before: kitchen2before,
+    after: kitchen2after
+  },
+{
+    title: "House Cleanup",
+    before: houseBefore,
+    after: houseAfter,
+  },
+  {
+    title: "Basement Cleanup",
+    before: BasementBefore,
+    after: BasementAfter,
+  },
+  {
+    title: "Teal Kitchen Demo",
+    before: GreenKitchenBefore,
+    after: GreenKitchenAfter,
+  },
+  {
+    title: "Shed 2 Demo",
+    before: Shed2Before,
+    after: Shed2After,
+  },
+  {
+    title: "Above Ground Pool",
+    before: AboveGroundPoolBefore,
+    after: AboveGroundPoolAfter,
+  },
+  {
+    title: "Brown Shed Demo",
+    before: BrownShedBefore,
+    after: BrownShedAfter,
+  },
+  {
+    title: "Basement Demo",
+    before: BasementBefore,
+    after: BasementAfter,
+  },
+  {
+    title: "Crate Demo",
+    before: CrateBefore,
+    after: CrateAfter,
   },
 ];
 ---
