--- a/src/sections/FooterSection.astro
+++ b/src/sections/FooterSection.astro
@@ -1,5 +1,6 @@
 ---
 import SocialLinks from "@/components/SocialLinks.astro";
+import Button from "@/components/Button/Button"
 ---
 
 <footer>
@@ -7,11 +8,11 @@ import SocialLinks from "@/components/SocialLinks.astro";
     class="flex flex-wrap justify-center lg:justify-between items-center w-95/100 mx-auto py-3 px-5 text-center bg-primary"
   >
     <div class="flex gap-6">
-      <a href="/privacy-policy" class="text-white/70 text-base hover:text-white"
-        >Privacy Policy</a
+      <Button variant="link" href="/privacy-policy" className="text-white/70 text-base hover:text-white"
+        >Privacy Policy</Button
       >
-      <a href="/cookie-policy" class="text-white/70 text-base hover:text-white"
-        >Cookie Policy</a
+      <Button variant="link" href="/cookie-policy" className="text-white/70 text-base hover:text-white"
+        >Cookie Policy</Button
       >
     </div>
     <div>
