--- a/src/sections/ServicesSection.astro
+++ b/src/sections/ServicesSection.astro
@@ -2,7 +2,13 @@
 import Heading from "@/components/Heading";
 import ServicesCard from "@/components/LoopComponents/ServicesCard.astro";
 
-const services = Astro.props.services ?? [
+const services = [
+      {
+  icon: "fa6-regular:building",
+  title: "Demolitions",
+  description:
+    "Our exterior demolition services ensure safe and efficient teardown of structures while adhering to all safety and environmental regulations. We work on a diverse range of projects, from small residential buildings to large commercial structures.",
+},
   {
     icon: "fa6-solid:trash-can",
     title: "Junk Removal",
@@ -14,12 +20,6 @@ const services = Astro.props.services ?? [
     title: "Estate Cleanouts",
     description:
       "Comprehensive Estate Cleanouts made stress-free. From furniture to personal items, we handle it all, responsibly disposing or donating. Transition smoothly with our considerate and professional service.",
-  },
-  {
-    icon: "fa6-regular:building",
-    title: "Exterior Demolition",
-    description:
-      "Our exterior demolition services ensure safe and efficient teardown of structures while adhering to all safety and environmental regulations. We work on a diverse range of projects, from small residential buildings to large commercial structures.",
   },
 ];
 ---
