--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -2,6 +2,7 @@
 import { Image } from "astro:assets";
 import { Icon } from "astro-icon/components";
 import Logo from "@/assets/farias.png";
+// import Logo from "@/assets/newLogo.jpg";
 import Button from "@/components/Button/Button";
 import SocialLinks from "@/components/SocialLinks.astro";
 import { contactItems } from "@/SiteData.js"; // ✅ Import contact items
