--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -55,14 +55,14 @@ const contactIconTextClasses = "text-base hidden lg:block";
       <div class="flex items-center justify-between min-h-18">
         <!-- Logo -->
         <div class="flex-shrink-0 flex items-center">
-          <div class="w-20 h-20 rounded flex items-center justify-center">
+          <a href="/" class="w-20 h-20 rounded flex items-center justify-center">
             <Image
               src={Logo}
               alt={"Faria's Demolition"}
               height={65}
               width={65}
             />
-          </div>
+          </a>
         </div>
 
         <!-- Navigation Links -->
