--- a/src/components/Form/Form.astro
+++ b/src/components/Form/Form.astro
@@ -21,7 +21,7 @@ const {
   consentLearnMoreLabel = "Learn more",
   consentLearnMoreUrl = "/privacy-policy",
   consentWrapperClass = "flex items-start text-left text-dark-secondary mb-4",
-  consentInputClass = "mr-2 mt-[4px] w-4 h-4",
+  consentInputClass = "mr-2 mt-[4px] w-4 h-4 checked:accent-primary",
   consentLabelClass = labelClass + " m-0",
 } = Astro.props;
 ---
