--- a/src/layouts/SEO.astro
+++ b/src/layouts/SEO.astro
@@ -1,7 +1,6 @@
 ---
 // import defaultOGImage from "@/assets/Logo-gradient-bg.jpg";
 import { SiteData } from "@/SiteData";
-
 export interface Props {
   title: string;
   description?: string;
@@ -12,7 +11,7 @@ export interface Props {
 const {
   title,
   description,
-  image,
+  image = SiteData.Logo,
   keywords,
   canonicalUrl,
   robots,
