--- a/src/layouts/Theme.astro
+++ b/src/layouts/Theme.astro
@@ -10,7 +10,7 @@ import "../styles/animations.css";
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
 <link rel="manifest" href="/favicons/site.webmanifest" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/favicons/favicon.ico" />
 
 <!-- Apple specific -->
 <meta name="mobile-web-app-capable" content="yes" />
