--- a/src/layouts/Theme.astro
+++ b/src/layouts/Theme.astro
@@ -15,3 +15,4 @@ import "../styles/animations.css";
 <!-- Apple specific -->
 <meta name="mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="var(--color-primary)" />
+<meta name="theme-color" content="var(--color-primary)" />
