--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import QuoteSection from "@/sections/QuoteSection.astro";
 import FAQSection from "@/sections/FAQSection.astro";
 import ProjectsSection from "@/sections/ProjectsSection.astro";
 import TestimonialsSection from "@/sections/TestimonialsSection.astro";
+import SecondaryHero from "@/sections/SecondaryHero.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -20,6 +21,7 @@ import TestimonialsSection from "@/sections/TestimonialsSection.astro";
   title="Your one-stop solution for cleaning and clearing in the State of New Jersey"
 >
   <Header />
+  <!-- <SecondaryHero /> -->
   <HeroSection />
   <ServicesSection />
   <AboutSection />
