--- a/src/components/LoopComponents/ServicesCard.astro
+++ b/src/components/LoopComponents/ServicesCard.astro
@@ -14,7 +14,7 @@ const {
 ---
 
 <article
-  class={`bg-light-primary p-10 text-center shadow-xl transition-all duration-200 ${cardClass} ${className}`}
+  class={`bg-light-primary p-10 text-center shadow-xl transition-all duration-200 load fade-in ${cardClass} ${className}`}
 >
   <Icon name={icon} size="56" class={`mx-auto ${iconClass}`} />
   <Heading className="h3 mt-6 text-dark-primary">{title}</Heading>
