--- a/src/components/LoopComponents/ContactCard.astro
+++ b/src/components/LoopComponents/ContactCard.astro
@@ -17,7 +17,7 @@ const {
 <a
   href={href}
   target={target}
-  class={`block bg-light-primary p-10 text-center shadow-xl ring-1 ring-black/5 hover:shadow-2xl transition-all duration-300 hover:scale-105 ${cardClass} ${className}`}
+  class={`block bg-light-primary p-10 load fade-in text-center shadow-xl ring-1 ring-black/5 hover:shadow-2xl transition-all duration-300 hover:scale-105 ${cardClass} ${className}`}
 >
   <Icon 
     name={icon} 
