--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -35,7 +35,7 @@ const enhancedMenuItems = menuItems.map(item => ({
     class="w-full mx-auto flex justify-between items-center text-sm bg-primary text-white py-2 px-5"
   >
     <!-- Social Media Icons (hide on mobile) -->
-    <div class="hidden sm:flex items-center space-x-4">
+    <div class="flex items-center space-x-4">
       <SocialLinks />
     </div>
 
@@ -65,10 +65,6 @@ const enhancedMenuItems = menuItems.map(item => ({
       }
     </div>
 
-    <!-- Mobile: Compact contact display -->
-    <div class="flex sm:hidden items-center">
-      <span class="text-xs">732-374-1957</span>
-    </div>
   </div>
 
   <!-- Main navigation -->
